# Range_Queries

./: .clang-format  CMakeLists.txt  README.md  main.cpp  ref_main.cpp
.github/workflows/: workflow.yml
RB_Tree/include/: RB_Tree.h
include/: range_queries.h  ref_range_queries.h
src/: range_queries.cpp
unit_tests/: CMakeLists.txt  main.cpp
unit_tests/data/common/: basic_2.ans  basic_4.ans
unit_tests/src/: unit_tests.cpp
unit_tests/test_utils/: CMakeLists.txt
unit_tests/test_utils/include/: test_utils.h  test_utils_detail.h
unit_tests/test_utils/src/: test_utils.cpp
unit_tests/tests/: CMakeLists.txt  main.cpp  tests.cpp
utils/include/: log.h
